REGRESSION(289503@main): [macOS iOS wk2 Debug] ASSERTION FAILED: clipRectsContext.rootLayer == m_clipRectsCache->m_clipRectsRoot https://bugs.webkit.org/show_bug.cgi?id=286777 <rdar://143918241>

Reviewed by Simon Fraser.

collectFragments within a paginated layer computes clip rects relative to that
paginated layer in order to minimize the number of fragments. This is different
from the clip rects generated during actual painting (which are relative to the
root), so use the temporary clip rects type.

* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::collectFragments):

Canonical link: https://commits.webkit.org/289597@main